# transit.sh

./: .gitignore  LICENSE  Pipfile  README.md  app.py  pyproject.toml  requirements.txt  webapp.py
.github/workflows/: unit-tests.yml
gui/: helpers.py  ui.py  vertical_layout.tcss
lib/: __init__.py  callbacks.py  classes.py  duplex.py  helpers.py  logging.py  metadata.py  store.py  transfer.py
static/: download.html  index.html  preview.html  robots.txt  style.css
static/css/: style.css
static/js/: file-transfer.js
static/templates/: download.html  preview.html
tests/: conftest.py  helpers.py  requirements-test.txt  test_endpoints.py  test_journeys.py  test_unit.py  testclient.py  ws_client.py
views/: __init__.py  http.py  misc.py  websockets.py
